Fix height clipping on mobile

--- a/styles.css
+++ b/styles.css
@@ -262,9 +262,12 @@ button.enter:hover {
 }
 
 @media only screen and (max-width: 768px) {
+  html, body, #calculator {
+    height: 100%;
+  }
+  
   #calculator {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
   }
